# typing-reader

./: .gitignore  Cargo.toml  README.md
docs/: README-PT_BR.md
src/: core.rs  file.rs  main.rs  params.rs  state.rs  term.rs  tui.rs  tui_app.rs
src/_app/: mod.rs
