[package]
name = "typing-reader"
version = "0.1.0"
authors = ["João Carlos Rodrigues Júnior"]
edition = "2021"
description = "A file reader, and a typing trainer."
# TODO: documentation
readme = "README.md"
# TODO: homepage
repository = "https://github.com/JaoCR/typing-reader/blob/master/README.md"
license = "MIT | Apache-2.0"
keywords = ["typing", "reader", "trainer"]
category = "Utility"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
crossterm = "0.25.0"
stable-eyre = "0.2.2"
tui = "0.19.0"
